--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      <img src="{{ '/assets/images/seu_sipailou_campus_doudou.jpg' | relative_url }}" alt="SEU Sipailou Doudou" class="cat-header-logo">
+      <img src="{{ '/assets/images/lab_logo.png' | relative_url }}" alt="SEU Sipailou Doudou" class="cat-header-logo">
 
       {{ site.title | escape }}
     </a>
