--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,25 @@
           </span>
         </label>
 
-        <div class="trigger">
-          {%- for path in site.header_pages -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
+<div class="trigger">
+          {%- assign is_en = page.url | contains: "/en/" -%}
+          {%- if is_en -%}
+            <a class="page-link" href="/en/research/">Research</a>
+            <a class="page-link" href="/en/members/">Team</a>
+            <a class="page-link" href="/en/gallery/">Gallery</a>
+            <a class="page-link" href="/en/address/">Contact</a>
+            <span style="margin-left: 15px; font-size: 14px;">
+              <a href="{{ page.url | replace: '/en/', '/' }}" style="color: #ccc; text-decoration: none;">CN</a> <span style="color: #fff;">|</span> <span style="color: #fff; font-weight: bold;">EN</span>
+            </span>
+          {%- else -%}
+            <a class="page-link" href="/research/">研究方向</a>
+            <a class="page-link" href="/members/">成员介绍</a>
+            <a class="page-link" href="/gallery/">相册</a>
+            <a class="page-link" href="/address/">联系我们</a>
+            <span style="margin-left: 15px; font-size: 14px;">
+              <span style="color: #fff; font-weight: bold;">CN</span> <span style="color: #fff;">|</span> <a href="/en{{ page.url }}" style="color: #ccc; text-decoration: none;">EN</a>
+            </span>
+          {%- endif -%}
         </div>
       </nav>
     {%- endif -%}
