Switch to front matter based language detection

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,7 @@
       </label>
 
       <div class="trigger">
-        {%- assign is_en = page.url | contains: "/en/" -%}
-        {%- if is_en -%}
+        {%- if page.lang == "en" -%}
         <a class="page-link" href="/en/research/">Research</a>
         <a class="page-link" href="/en/members/">Team</a>
         <a class="page-link" href="/en/gallery/">Gallery</a>
