Add News page and 2026 Greeting post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
 
       <div class="trigger">
         {%- if page.lang == "en" -%}
+        <a class="page-link" href="/news/">News</a>
         <a class="page-link" href="/en/research/">Research</a>
         <a class="page-link" href="/en/members/">Members</a>
         <a class="page-link" href="/en/gallery/">Gallery</a>
@@ -29,6 +30,7 @@
             style="color: #fff; font-weight: bold;">EN</span>
         </span>
         {%- else -%}
+        <a class="page-link" href="/cn/news/">最新动态</a>
         <a class="page-link" href="/research/">研究方向</a>
         <a class="page-link" href="/members/">成员介绍</a>
         <a class="page-link" href="/gallery/">相册</a>
