Replace logo with CSS rainbow Newbio text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,20 @@
+<style>
+  .logo-newbio {
+    font-weight: bold;
+    font-size: 24px;
+    background: linear-gradient(to right, red, orange, #dac400, green, blue, indigo, violet);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    margin-right: 10px;
+    vertical-align: middle;
+  }
+</style>
 <header class="site-header" role="banner">
 
   <div class="wrapper">
     <a class="site-title" rel="author" href="/">
-      <img src="{{ '/assets/images/lab_logo.png' | relative_url }}" alt="SEU Sipailou Doudou" class="cat-header-logo">
+      <span class="logo-newbio">Newbio</span>
 
       {{ site.title | escape }}
     </a>
