--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,17 @@
     height: 50px;
     /* 固定高度，符合用户要求 */
     text-decoration: none;
+    color: #333;
+    /* Default dark color */
+  }
+
+  .site-title:visited {
+    color: #333;
+  }
+
+  .site-nav .page-link {
+    color: #333;
+    /* Default dark color */
   }
 
   .logo-newbio {
@@ -27,6 +38,27 @@
     /* 防止行高撑开 */
     letter-spacing: -1px;
     /* 紧凑一点 */
+  }
+
+  .lang-switch {
+    margin-left: 15px;
+    font-size: 14px;
+  }
+
+  .lang-separator {
+    color: #333;
+    /* Default dark color */
+  }
+
+  .lang-active {
+    color: #333;
+    /* Default dark color */
+    font-weight: bold;
+  }
+
+  .lang-inactive {
+    color: #999;
+    text-decoration: none;
   }
 </style>
 <header class="site-header" role="banner">
@@ -55,9 +87,9 @@
         <a class="page-link" href="/en/members/">Members</a>
         <a class="page-link" href="/en/gallery/">Gallery</a>
         <a class="page-link" href="/en/address/">Contact</a>
-        <span style="margin-left: 15px; font-size: 14px;">
-          <a href="/cn/" style="color: #ccc; text-decoration: none;">CN</a> <span style="color: #fff;">|</span> <span
-            style="color: #fff; font-weight: bold;">EN</span>
+        <span class="lang-switch">
+          <a href="/cn/" class="lang-inactive">CN</a> <span class="lang-separator">|</span> <span
+            class="lang-active">EN</span>
         </span>
         {%- else -%}
         <a class="page-link" href="/cn/news/">最新动态</a>
@@ -65,9 +97,9 @@
         <a class="page-link" href="/members/">成员介绍</a>
         <a class="page-link" href="/gallery/">相册</a>
         <a class="page-link" href="/address/">联系我们</a>
-        <span style="margin-left: 15px; font-size: 14px;">
-          <span style="color: #fff; font-weight: bold;">CN</span> <span style="color: #fff;">|</span> <a href="/"
-            style="color: #ccc; text-decoration: none;">EN</a>
+        <span class="lang-switch">
+          <span class="lang-active">CN</span> <span class="lang-separator">|</span> <a href="/"
+            class="lang-inactive">EN</a>
         </span>
         {%- endif -%}
       </div>
