--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,8 +60,26 @@
     color: #999;
     text-decoration: none;
   }
+
+  /* --- Header Style: White (For Dark Backgrounds) --- */
+  .header-white .site-title,
+  .header-white .site-title:visited,
+  .header-white .site-nav .page-link,
+  .header-white .lang-separator,
+  .header-white .lang-active {
+    color: #ffffff !important;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  }
+
+  .header-white .lang-inactive {
+    color: #cccccc !important;
+  }
+
+  .header-white .site-nav .menu-icon svg path {
+    fill: #ffffff !important;
+  }
 </style>
-<header class="site-header" role="banner">
+<header class="site-header {% if page.header_style == 'white' %}header-white{% endif %}" role="banner">
 
   <div class="wrapper">
     <a class="site-title" rel="author" href="/">
