Refactor Blog into Publications: Add Paper and Patent sections

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -84,7 +84,7 @@
         <a class="page-link" href="/news/">News</a>
         <a class="page-link" href="/en/research/">Research</a>
         <a class="page-link" href="/en/members/">Members</a>
-        <a class="page-link" href="/blog/">Blog</a>
+        <a class="page-link" href="/publications/">Publications</a>
         <a class="page-link" href="/en/gallery/">Gallery</a>
         <a class="page-link" href="/en/address/">Contact</a>
         <span class="lang-switch">
@@ -95,7 +95,7 @@
         <a class="page-link" href="/cn/news/">最新动态</a>
         <a class="page-link" href="/research/">研究方向</a>
         <a class="page-link" href="/members/">成员介绍</a>
-        <a class="page-link" href="/blog/">博客</a>
+        <a class="page-link" href="/cn/publications/">论文与专利</a>
         <a class="page-link" href="/gallery/">相册</a>
         <a class="page-link" href="/address/">联系我们</a>
         <span class="lang-switch">
