Fix SCSS front matter: force multi-line structure with comment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,4 +1,7 @@
---- # Jekyll Front Matter (Do not remove or format) --- @charset "utf-8";
+---
+# Jekyll Front Matter (Do not remove or format)
+---
+@charset "utf-8";
 
 @import "minima";
 
